fix jumping of the text when selecting different styles

--- a/src/blocks/TextEditor/TextEditorStyles.css
+++ b/src/blocks/TextEditor/TextEditorStyles.css
@@ -59,6 +59,9 @@ button {
     width: 100%;
     overflow-y: auto;
     z-index: 0;
+    display: flex;
+    flex-direction: column;
+    flex-grow: inherit;
 }
 
 .DraftEditor-editorContainer {
